# ephemeral-gpu-image-inference-operator

./: Makefile  README.md  pyproject.toml
charts/ephemeral-gpu-image-inference-operator/: Chart.yaml  values.yaml
charts/ephemeral-gpu-image-inference-operator/templates/: _helpers.tpl  crd.yaml  deployment.yaml  rbac.yaml  serviceaccount.yaml
docker/: job.Dockerfile  operator.Dockerfile
docs/: README.md  sequence-diagram.md
examples/: ephemeralaccelerationjob.yaml  gpujob.yaml
resources/: ephemeralaccelerationjob.yaml  gpujob.yaml
scripts/: demo.sh  kind-or-k3s-notes.md
src/cli/: README.md  __init__.py  main.py
src/job_image_infer/: __init__.py  requirements.txt  run_infer.py
src/operator/: __init__.py  crd.py  k8s.py  main.py  reconcile.py  templates.py
